[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version = "0.3.1"
version_files = ["pyproject.toml:version"]

[tool.isort]
profile = "black"

[tool.poetry]
authors = ["Qin Li <liblaf@outlook.com>"]
description = "Curve fitting width function IUH (WFIUH) in Hydrology"
documentation = "https://liblaf.github.io/WFIUH/"
homepage = "https://liblaf.github.io/WFIUH/"
license = "MIT"
name = "WFIUH"
readme = "README.md"
repository = "https://github.com/liblaf/WFIUH"
version = "0.3.1"

[tool.poetry.dependencies]
click = "^8.1.3"
matplotlib = "^3.6.2"
numpy = "^1.23.4"
pandas = "^1.5.1"
python = ">=3.10,<3.12"
rich = "^12.6.0"
scikit-learn = "^1.1.3"
scipy = "^1.9.3"
seaborn = "^0.12.1"

[tool.poetry.group.build.dependencies]
pyinstaller = "^5.7.0"

[tool.poetry.group.docs.dependencies]
lxml = "^4.9.1"
mkdocs-git-authors-plugin = "^0.6.4"
mkdocs-git-committers-plugin-2 = "^1.1.1"
mkdocs-git-revision-date-localized-plugin = "^1.1.0"
mkdocs-material = ">=8.5.7,<10.0.0"
